# pure_pursuit_planner

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: ci.yml
config/: params.yaml
include/pure_pursuit_planner/: pure_pursuit_planner_component.hpp  pure_pursuit_planner_node.hpp
launch/: emcl_pur_pursuit.py  emcl_pure_pursuit.py  imu_purepursuit.py  obstacle_simulation.py  odrive_emcl_rosbag_pure_pursuit.py  odrive_gps_pure_pursuit.py  odrive_gps_rosbag_pure_pursuit.py  odrive_gps_switch_pure_pursuit.py  odrive_gps_switch_pure_pursuit_04.py  odrive_gps_switch_pure_pursuit_2.py  odrive_gps_switch_pure_pursuit_last.py  odrive_imu_odom_pure_pursuit.py  odrive_lidar_pure_pursuit.py  odrive_odom_pure_pursuit.py  pure_pursuit_planner.py  pure_pursuit_planner_with_sound.py  save_path.py  save_path_emcl.py  save_path_gnss.py  save_path_gps.py  save_path_gps_ps4.py  save_path_rosbag.py
log/: latest_list
rviz/: pure_pursuit.rviz  pure_pursuit_planner.rviz  pure_pursuit_planner_lidar.rviz
src/: pure_pursuit_planner.cpp  pure_pursuit_planner_component.cpp  pure_pursuit_planner_component_origin.cpp  pure_pursuit_planner_node.cpp
test/: test_all_functions_csv.cpp  test_pp_component.cpp  test_utils.hpp
test/test_data/: CalculateControl.csv  alphaExceptionHandling.csv  calcFirstNearestPointIndex.csv  calcLf.csv  calcOldNearestPointIndex.csv  calculateAngularVelocity.csv  computeVelocity.csv  curvatureToVelocity.csv  isGoalReached.csv  searchTargetIndex.csv  test_results_alphaExceptionHandling.csv  test_results_calcFirstNearestPointIndex.csv  test_results_calcLf.csv  test_results_calcOldNearestPointIndex.csv  test_results_calculateAngularVelocity.csv  test_results_computeVelocity.csv  test_results_curvatureToVelocity.csv  test_results_isGoalReached.csv  test_results_searchTargetIndex.csv
